# pymainichigo

./: .gitignore  README.md  dailygo.yaml  goban.pde.template  main.py  pyproject.toml  requirements.txt  selector.py  setup.py  xvfbtest.py
pymainichigo/: desktop.py  goban.pde.template  main.py  selector.py
pymainichigo/renderer/: pillow.py  processing.py  render.py
pymainichigo/sgf/: sgf.py
renderer/: processing.py
